// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a brand field that has data that is found 1`] = `
<React.Fragment>
  <BrandSelect
    brandSelected={2}
    brands={
      Array [
        Object {
          "brand_name": "id is 1",
          "id": 1,
        },
        Object {
          "brand_name": "find me",
          "id": 2,
        },
        Object {
          "brand_name": "id is 3",
          "id": 3,
        },
      ]
    }
    disabled={false}
    error=""
    fieldName="data_field_120"
    isEmptyAllowed={true}
    onChange={[Function]}
  />
</React.Fragment>
`;

exports[`it renders a brand field that has data that is not found 1`] = `
<React.Fragment>
  <BrandSelect
    brandSelected={202}
    brands={
      Array [
        Object {
          "brand_name": "id is 1",
          "id": 1,
        },
        Object {
          "brand_name": "find me",
          "id": 2,
        },
        Object {
          "brand_name": "id is 3",
          "id": 3,
        },
      ]
    }
    disabled={false}
    error=""
    fieldName="data_field_120"
    isEmptyAllowed={true}
    onChange={[Function]}
  />
</React.Fragment>
`;

exports[`it renders a brand field that has no data 1`] = `
<React.Fragment>
  <BrandSelect
    brands={
      Array [
        Object {
          "brand_name": "id is 1",
          "id": 1,
        },
        Object {
          "brand_name": "find me",
          "id": 2,
        },
        Object {
          "brand_name": "id is 3",
          "id": 3,
        },
      ]
    }
    disabled={false}
    error=""
    fieldName="data_field_120"
    isEmptyAllowed={true}
    onChange={[Function]}
  />
</React.Fragment>
`;

exports[`it renders a checkbox field that has no data 1`] = `
<React.Fragment>
  <FormTextInput
    error=""
    fieldName="data_field_120"
    onChange={[Function]}
    onClick={[Function]}
    type="number"
  />
</React.Fragment>
`;

exports[`it renders a checkbox field that is false 1`] = `
<React.Fragment>
  <div
    className="ui toggle checkbox"
  >
    <input
      checked={false}
      className=""
      name="data_field_120"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
</React.Fragment>
`;

exports[`it renders a checkbox field that is true 1`] = `
<React.Fragment>
  <div
    className="ui toggle checkbox"
  >
    <input
      checked={true}
      className=""
      name="data_field_120"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
</React.Fragment>
`;

exports[`it renders a country field that has data 1`] = `
<React.Fragment>
  <CountrySelect
    countrySelected="NZ"
    fieldName="data_field_120"
    isEmptyAllowed={true}
    onChange={[Function]}
  />
</React.Fragment>
`;

exports[`it renders a country field that has no data 1`] = `
<React.Fragment>
  <CountrySelect
    fieldName="data_field_120"
    isEmptyAllowed={true}
    onChange={[Function]}
  />
</React.Fragment>
`;

exports[`it renders a currency field that has data 1`] = `
<React.Fragment>
  <FormTextInput
    error=""
    fieldName="data_field_120"
    onChange={[Function]}
    onClick={[Function]}
    type="number"
    value={23.9}
  />
</React.Fragment>
`;

exports[`it renders a currency field that has no data 1`] = `
<React.Fragment>
  <FormTextInput
    error=""
    fieldName="data_field_120"
    onChange={[Function]}
    onClick={[Function]}
    type="number"
  />
</React.Fragment>
`;

exports[`it renders a part Type field that has no data 1`] = `
<React.Fragment>
  <PartTypeSelect
    disabled={false}
    error=""
    fieldName="data_field_120"
    isEmptyAllowed={true}
    onChange={[Function]}
    sections={
      Array [
        Object {
          "id": 1,
          "partTypes": Array [
            Object {
              "id": 11,
              "name": "id 11",
            },
            Object {
              "id": 21,
              "name": "id 11",
            },
          ],
        },
        Object {
          "id": 2,
          "partTypes": Array [
            Object {
              "id": 2,
              "name": "find me",
            },
            Object {
              "id": 22,
              "name": "id 11",
            },
          ],
        },
      ]
    }
  />
</React.Fragment>
`;

exports[`it renders a part type field that has data that is found 1`] = `
<React.Fragment>
  <PartTypeSelect
    disabled={false}
    error=""
    fieldName="data_field_120"
    isEmptyAllowed={true}
    onChange={[Function]}
    partTypeSelected={2}
    sections={
      Array [
        Object {
          "id": 1,
          "partTypes": Array [
            Object {
              "id": 11,
              "name": "id 11",
            },
            Object {
              "id": 21,
              "name": "id 11",
            },
          ],
        },
        Object {
          "id": 2,
          "partTypes": Array [
            Object {
              "id": 2,
              "name": "find me",
            },
            Object {
              "id": 22,
              "name": "id 11",
            },
          ],
        },
      ]
    }
  />
</React.Fragment>
`;

exports[`it renders a part type field that has data that is not found 1`] = `
<React.Fragment>
  <PartTypeSelect
    disabled={false}
    error=""
    fieldName="data_field_120"
    isEmptyAllowed={true}
    onChange={[Function]}
    partTypeSelected={202}
    sections={
      Array [
        Object {
          "id": 1,
          "partTypes": Array [
            Object {
              "id": 11,
              "name": "id 11",
            },
            Object {
              "id": 21,
              "name": "id 11",
            },
          ],
        },
        Object {
          "id": 2,
          "partTypes": Array [
            Object {
              "id": 2,
              "name": "find me",
            },
            Object {
              "id": 22,
              "name": "id 11",
            },
          ],
        },
      ]
    }
  />
</React.Fragment>
`;

exports[`it renders a supplier field that has data that is found 1`] = `
<React.Fragment>
  <SupplierSelect
    disabled={false}
    error=""
    fieldName="data_field_120"
    isEmptyAllowed={true}
    onChange={[Function]}
    supplierSelected={2}
    suppliers={
      Array [
        Object {
          "id": 1,
          "supplier_name": "id is 1",
        },
        Object {
          "id": 2,
          "supplier_name": "find me",
        },
        Object {
          "id": 3,
          "supplier_name": "id is 3",
        },
      ]
    }
  />
</React.Fragment>
`;

exports[`it renders a supplier field that has data that is not found 1`] = `
<React.Fragment>
  <SupplierSelect
    disabled={false}
    error=""
    fieldName="data_field_120"
    isEmptyAllowed={true}
    onChange={[Function]}
    supplierSelected={202}
    suppliers={
      Array [
        Object {
          "id": 1,
          "supplier_name": "id is 1",
        },
        Object {
          "id": 2,
          "supplier_name": "find me",
        },
        Object {
          "id": 3,
          "supplier_name": "id is 3",
        },
      ]
    }
  />
</React.Fragment>
`;

exports[`it renders a supplier field that has no data 1`] = `
<React.Fragment>
  <SupplierSelect
    disabled={false}
    error=""
    fieldName="data_field_120"
    isEmptyAllowed={true}
    onChange={[Function]}
    suppliers={
      Array [
        Object {
          "id": 1,
          "supplier_name": "id is 1",
        },
        Object {
          "id": 2,
          "supplier_name": "find me",
        },
        Object {
          "id": 3,
          "supplier_name": "id is 3",
        },
      ]
    }
  />
</React.Fragment>
`;

exports[`it renders a text field that has data 1`] = `
<React.Fragment>
  <FormTextInput
    error=""
    fieldName="data_field_120"
    onChange={[Function]}
    onClick={[Function]}
    value="SHow text"
  />
</React.Fragment>
`;

exports[`it renders a text field that has no data 1`] = `
<React.Fragment>
  <FormTextInput
    error=""
    fieldName="data_field_120"
    onChange={[Function]}
    onClick={[Function]}
  />
</React.Fragment>
`;

exports[`it renders a textarea field that has data 1`] = `
<React.Fragment>
  <FormTextAreaInput
    cols={100}
    error=""
    fieldName="data_field_120"
    onChange={[Function]}
    onClick={[Function]}
    value="SHow text"
  />
</React.Fragment>
`;

exports[`it renders a textarea field that has no data 1`] = `
<React.Fragment>
  <FormTextAreaInput
    cols={100}
    error=""
    fieldName="data_field_120"
    onChange={[Function]}
    onClick={[Function]}
    placeholder="put text here"
  />
</React.Fragment>
`;
